# OTUS-CXX-Professional

./: README.md
.github/workflows/: auto-release.yml
HW1/: CMakeLists.txt  test_version.cpp
HW10/: CMakeLists.txt  bulkserver.hpp  main.cpp
HW10/libs/: CMakeLists.txt
HW10/libs/async/: CMakeLists.txt
HW10/libs/async/include/: async.h
HW10/libs/bulklib/: CMakeLists.txt
HW10/libs/bulklib/include/: bulk.hpp  bulkprinter.hpp  consolebulkprinter.hpp
HW10/libs/bulklib/src/: asyncbulkprinter.hpp
HW10/libs/printlib/: CMakeLists.txt
HW10/libs/printlib/include/: iprinter.hpp
HW10/libs/printlib/src/: consoleprinter.cpp
HW12/: CMakeLists.txt  main.cpp
HW12/libs/: CMakeLists.txt
HW12/libs/classifiers/: CMakeLists.txt
HW12/libs/classifiers/include/: ibinaryclassifier.hpp  logregclassifier.hpp  utils.hpp
HW12/libs/classifiers/src/: logregclassifier.cpp  utils.cpp
HW2/: CMakeLists.txt  ip_filter.cpp
HW3/: CMakeLists.txt  main.cpp
HW3/lib/: CMakeLists.txt
HW3/lib/myallocator/: CMakeLists.txt
HW3/lib/myallocator/include/: my_poll_allocator.h
HW3/lib/myallocator/test/: CMakeLists.txt  main.cpp  memuse.h
HW3/lib/mycontainers/: CMakeLists.txt
HW3/lib/mycontainers/include/: my_vector.h
HW3/lib/mycontainers/test/: CMakeLists.txt  main.cpp
HW4/: CMakeLists.txt  main.cpp
HW5/: CMakeLists.txt  main.cpp
HW5/docs/: doxygen.conf.in
HW5/libs/: CMakeLists.txt
HW5/libs/doceditor/: CMakeLists.txt
HW5/libs/doceditor/include/: doceditor.hpp  document.hpp
HW5/libs/doceditor/src/: doceditor.cpp  docimporterfabric.cpp  docimporterfabric.hpp  document.cpp  idocexporter.hpp  idocimporter.hpp  svgexporter.hpp  svgimporter.hpp
HW5/libs/docview/: CMakeLists.txt
HW5/libs/docview/include/: docview.hpp
HW5/libs/docview/src/: docview.cpp
HW5/libs/graphpr/: CMakeLists.txt
HW5/libs/graphpr/include/: graphicsitem.hpp  ipainter.hpp  lineitem.hpp  point.hpp  rect.hpp  rectitem.hpp
HW5/libs/graphpr/src/: graphicsitem.cpp  lineitem.cpp
HW5/libs/patterns/: CMakeLists.txt
HW5/libs/patterns/include/behavioral/: observable.hpp  observer.hpp
HW6/: CMakeLists.txt  main.cpp
HW6/libs/: CMakeLists.txt
HW6/libs/matrixlib/: CMakeLists.txt
HW6/libs/matrixlib/include/: matrix.hpp
HW6/libs/matrixlib/tests/: CMakeLists.txt  main.cpp
HW7/: CMakeLists.txt  main.cpp
HW7/libs/: CMakeLists.txt
HW7/libs/bulklib/: CMakeLists.txt
HW7/libs/bulklib/include/: consolebulkprinter.hpp  filebulkprinter.hpp
HW7/libs/bulklib/src/: commandscontroller.cpp
HW7/libs/bulklib/tests/: CMakeLists.txt
HW7/libs/helperslib/: CMakeLists.txt
HW7/libs/helperslib/include/: streamredirect.hpp
HW7/libs/printlib/include/: consoleprinter.hpp  iprinter.hpp
HW9/: CMakeLists.txt  main.cpp
HW9/libs/async/: CMakeLists.txt
HW9/libs/async/src/: async.cpp
HW9/libs/bulklib/include/: bulkprinter.hpp  commandscontroller.hpp  consolebulkprinter.hpp  filebulkprinter.hpp
HW9/libs/bulklib/src/: bulk.cpp  bulkprinter.cpp  commandscontroller.cpp
HW9/libs/bulklib/tests/: CMakeLists.txt  main.cpp
HW9/libs/printlib/include/: consoleprinter.hpp
